--- a/.github/workflows/compile-firmware-workflow-call.yaml
+++ b/.github/workflows/compile-firmware-workflow-call.yaml
@@ -27,7 +27,7 @@ on:
         description: "Keymap name. Default is default."
 
 jobs:
-  Compile:
+  compile:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Repository
