chore: Update keymap to use default value for keymap in compile firmware workflow call

--- a/.github/workflows/compile-firmware-on-push.yaml
+++ b/.github/workflows/compile-firmware-on-push.yaml
@@ -11,4 +11,4 @@ jobs:
     uses: ./.github/workflows/compile-firmware-workflow-call.yaml
     with:
       git-ref: ${{ github.ref }}
-      keymap: "default"
+      keymap: default
