chore: Update GitHub Actions workflow to use tag instead of git-ref

--- a/.github/workflows/update-version-on-push-tag.yaml
+++ b/.github/workflows/update-version-on-push-tag.yaml
@@ -11,7 +11,7 @@ jobs:
   validate-version:
     uses: ./.github/workflows/validate-version-workflow-call.yaml
     with:
-      git-ref: ${{ github.ref }}
+      tag: ${{ github.ref }}
   update-version:
     needs: [validate-version]
     if: ${{ failure() }}
