--- a/.github/workflows/compile-firmware-workflow-call.yaml
+++ b/.github/workflows/compile-firmware-workflow-call.yaml
@@ -13,6 +13,18 @@ on:
         required: false
         default: "default"
         description: "Keymap name. Default is default."
+  workflow_call:
+    inputs:
+      git-ref:
+        required: false
+        type: string
+        default: "main"
+        description: "Git ref to checkout. Default is main."
+      keymap:
+        type: string
+        required: false
+        default: "default"
+        description: "Keymap name. Default is default."
 
 jobs:
   compile:
@@ -46,9 +58,9 @@ jobs:
           KEYMAP_NAME: ${{ inputs.keymap }}
       - name: Create Artifacts Directory
         run: |
-          mkdir -p ~/artifacts
-          cp ~/qmk_firmware/.build/*.hex ~/artifacts/
-          cp ./LICENSE ~/artifacts/
+          mkdir -p ./artifacts
+          cp ~/qmk_firmware/.build/*.hex ./artifacts/
+          cp ./LICENSE ./artifacts/
         env:
           KEYBOARD_NAME: "hmproto34"
           KEYMAP_NAME: ${{ inputs.keymap }}
@@ -56,4 +68,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: hmproto34-${{ inputs.keymap }}
-          path: ~/artifacts
+          path: ./artifacts
