--- a/.github/workflows/upload-assets-on-release.yaml
+++ b/.github/workflows/upload-assets-on-release.yaml
@@ -12,7 +12,7 @@ jobs:
       keymap: "default"
   up:
     needs: [build]
-    if: ${{ succdss() }}
+    if: ${{ success() }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
