--- a/.github/workflows/upload-assets-on-release.yaml
+++ b/.github/workflows/upload-assets-on-release.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./hmproto34-default.hex
+          asset_path: /home/runner/work/hmproto34/hmproto34/hmproto34-default.hex # TODO: change this path
           asset_name: hmproto34-default.hex
           asset_content_type: application/octet-stream
         env:
