chore: Fix compile job

--- a/.github/workflows/compile-firmware-on-push.yaml
+++ b/.github/workflows/compile-firmware-on-push.yaml
@@ -21,15 +21,12 @@ jobs:
       - name: List Keymaps
         id: list-keymaps
         run: |
-          python -c "import os,json; print('matrix='+json.dumps({'include': [{'keymap': d} for d in os.listdir('keymaps') if os.path.isdir(os.path.join('keymaps', d))]}))" >> $GITHUB_ENV
+          python -c "import os,json; print('matrix='+json.dumps({'include': [{'keymap': d} for d in os.listdir('keymaps') if os.path.isdir(os.path.join('keymaps', d))]}))" >> $GITHUB_OUTPUT
   compile:
     needs: list-keymaps
-    runs-on: ubuntu-latest
     strategy:
       matrix: ${{fromJson(needs.list-keymaps.outputs.matrix)}}
-    steps:
-      - name: Compile Firmware
-        uses: ./.github/workflows/compile-firmware-workflow-call.yaml
-        with:
-          git-ref: ${{ github.ref }}
-          keymap: ${{ matrix.keymap }}
+    uses: ./.github/workflows/compile-firmware-workflow-call.yaml
+    with:
+      git-ref: ${{ github.ref }}
+      keymap: ${{ matrix.keymap }}
